// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildInitialCode builds a script for a workflow 1`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/login\\");

const login = async () => {
  const context = await launch({ url: \\"http://localhost\\" });
  // 🐺 CREATE CODE HERE
  await context.close();
};

login();"
`;

exports[`buildInitialCode builds a script for a workflow 2`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/login\\");

const login = async () => {
  const context = await launch({ device: \\"iPhone 7\\", url: \\"http://localhost\\" });
  // 🐺 CREATE CODE HERE
  await context.close();
};

login();"
`;

exports[`buildInitialCode builds a test for a workflow 1`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/login\\");

describe('login', () => {
  let context;

  beforeAll(async () => {
    context = await launch({ url: \\"http://localhost\\" });
  });

  afterAll(() => context.close());

  // 🐺 CREATE CODE HERE
});"
`;

exports[`buildInitialCode builds a test for a workflow 2`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/login\\");

describe('login', () => {
  let context;

  beforeAll(async () => {
    context = await launch({ device: \\"iPhone 7\\", url: \\"http://localhost\\" });
  });

  afterAll(() => context.close());

  // 🐺 CREATE CODE HERE
});"
`;
